RESOLVED FIXED112806
[BlackBerry] compositing/iframes/scroll-fixed-transformed-element.html fails in manual testing
https://bugs.webkit.org/show_bug.cgi?id=112806
Summary [BlackBerry] compositing/iframes/scroll-fixed-transformed-element.html fails ...
Arvid Nilsson
Reported 2013-03-20 06:42:03 PDT
PR 283363 When visiting jquerymobile.com, or manually scrolling around LayoutTests/compositing/iframes/scroll-fixed-transformed-element.html, you can see that in the BlackBerry port, fixed positioned elements inside an iframe are positioned correctly only when you scroll that iframe, not when you scroll the main frame. When scrolling the iframe, the fixed pos element is positioned as if it was fixed with respect to the iframe's viewport. When scrolling the main frame, the fixed pos element is positioned as if it was fixed with respect to the main frame's viewport. The effects of the bug are only visual, i.e. not detectable by DRT.
Attachments
Patch (4.19 KB, patch)
2013-03-20 06:53 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2013-03-20 06:46:13 PDT
"LayoutTests/" superfluous
Arvid Nilsson
Comment 2 2013-03-20 06:53:27 PDT
Antonio Gomes
Comment 3 2013-03-20 10:43:34 PDT
Comment on attachment 194043 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194043&action=review > Source/WebCore/ChangeLog:14 > + When scrolling the iframe, the position: fixed element is correctly > + positioned, that is, as if it was fixed with respect to the iframe's > + viewport. When scrolling the main frame however, the fixed pos element > + was positioned as if it was fixed with respect to the main frame's > + viewport. That was left over in my TODO list :)
Arvid Nilsson
Comment 4 2013-03-20 11:07:26 PDT
Comment on attachment 194043 [details] Patch Thanks Antonio, I hoped you would remember this code :)
WebKit Review Bot
Comment 5 2013-03-20 11:23:21 PDT
Comment on attachment 194043 [details] Patch Clearing flags on attachment: 194043 Committed r146366: <http://trac.webkit.org/changeset/146366>
WebKit Review Bot
Comment 6 2013-03-20 11:23:24 PDT
All reviewed patches have been landed. Closing bug.
Arvid Nilsson
Comment 7 2013-03-21 02:14:55 PDT
Hmm, it wasn't quite this simple - it's now picking up the iframe code path for mainframe position: fixed divs =D
Note You need to log in before you can comment on or make changes to this bug.